# validata

./: .stignore  pyproject.toml  requirements.txt
.streamlit/: config.toml
backend/: app.py
backend/api/: search.py  verification.py
backend/services/: article_extractor.py  credibility_scorer.py  fact_checker.py  news_searcher.py
backend/utils/: helpers.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  USAGE.md
frontend/: api_client.py  app.py  charts.py  display.py  error_components.py  requirements.txt  styles.py
